# XenoCore

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: Vagrantfile  main.py
src/api/: main.py
src/core/: __init__.py  env_core.py  generator_core.py  plg_core.py
src/core/templates/: test.j2  vgfile.j2
src/gui/: gui.py  guidear.py  main.py  testglobal.py
src/gui/assets/: __init__.py  fonts.py  menu.py  themes.py
src/gui/components/: __init__.py  callbacks.py  constants.py  core.py  env_core.py  fonts.py  gui_core.py  menu.py  plg_core.py  tags.py  themes.py
src/test/: test.py
vagrantfiles/dhcp/scripts/: dhcpserver.sh
vagrantfiles/grafana&prometheus/: Vagrantfile
vagrantfiles/grafana&prometheus/scripts/: websetup.sh
vagrantfiles/php/: Vagrantfile
vagrantfiles/webserver/scripts/: initialconfig.sh
