[project]
name = "XenoCore"
version = "1.0.0"
description = "A GUI-based Vagrant manager made to manage the environments, plugins, and Vagrantfiles of your system."
authors = [{ name = "akhos09", email = "pablofdezlpz09@gmail.com" }]

license="GPL-3.0 license"
license-files = ["LICENSE"]

readme = "README.md"

keywords = [
  "python", "vagrant", "vagrantfile", "vagrant-plugin"
]

requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.3.1",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.50.2",
]

[project.urls]
Repository = "https://github.com/akhos09/XenoCore"
